--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  line-height: 1.7em;
+  max-width: 960px;
+  margin: 0 auto;
+}
+h1,
+h2 {
+  text-align: center;
+  margin: 0.4rem;
+  padding: 0.3rem;
+}
+
+@media all and (max-width: 600px) {
+  h1 {
+    font-size: 1.2rem;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  h3 {
+    font-size: 0.8rem;
+  }
+}
